<resources>
    <string name="app_name">EMV ISO8583 SDK(demo)</string>

    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_backspace">Backspace</string>
    <string name="ic_delete">\u232b</string>
    <string name="add_sale">+</string>
    <string name="make_payment">Make Payment</string>

</resources>