<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:paddingStart="@dimen/dp_16"
        android:paddingEnd="@dimen/dp_16"
        android:layout_gravity="center"
        android:background="@color/purple">

        <com.subsidian.emvcardsdkdemo.ui.custom.CurrencyEditText
            android:id="@+id/currency_field"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:enabled="false"
            android:singleLine="true"
            android:textSize="@dimen/currency_text"
            android:inputType="numberDecimal"
            android:textColor="@color/white"
            android:background="@color/purple"
            android:textAlignment="center"
            android:text="0,00.00"
            app:locale="en_NG"
            app:groupDivider=","
            app:monetaryDivider="."
            app:showSymbol="true"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TableLayout
        android:id="@+id/keyboard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@drawable/keyboard_divider"
        android:orientation="vertical"
        android:showDividers="beginning|middle|end">

        <TableRow style="@style/keyboard_row">

            <TextView
                android:id="@+id/t9_key_1"
                style="@style/keyboard_number_button"
                android:textColor="@color/white"
                android:text="@string/number_one"/>

            <TextView
                android:id="@+id/t9_key_2"
                style="@style/keyboard_number_button"
                android:textColor="@color/white"
                android:text="@string/number_two"/>

            <TextView
                android:id="@+id/t9_key_3"
                style="@style/keyboard_number_button"
                android:textColor="@color/white"
                android:text="@string/number_three"/>
        </TableRow>

        <TableRow style="@style/keyboard_row">

            <TextView
                android:id="@+id/t9_key_4"
                style="@style/keyboard_number_button"
                android:textColor="@color/white"
                android:text="@string/number_four"/>

            <TextView
                android:id="@+id/t9_key_5"
                style="@style/keyboard_number_button"
                android:textColor="@color/white"
                android:text="@string/number_five"/>

            <TextView
                android:id="@+id/t9_key_6"
                style="@style/keyboard_number_button"
                android:textColor="@color/white"
                android:text="@string/number_six"/>
        </TableRow>

        <TableRow style="@style/keyboard_row">

            <TextView
                android:id="@+id/t9_key_7"
                style="@style/keyboard_number_button"
                android:textColor="@color/white"
                android:text="@string/number_seven"/>

            <TextView
                android:id="@+id/t9_key_8"
                style="@style/keyboard_number_button"
                android:textColor="@color/white"
                android:text="@string/number_eight"/>

            <TextView
                android:id="@+id/t9_key_9"
                style="@style/keyboard_number_button"
                android:textColor="@color/white"
                android:text="@string/number_nine"/>
        </TableRow>

        <TableRow style="@style/keyboard_row">

            <TextView
                android:id="@+id/t9_key_clear"
                style="@style/keyboard_button"
                android:textColor="@color/red"
                android:text="@string/btn_clear"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                android:id="@+id/t9_key_0"
                style="@style/keyboard_number_button"
                android:textColor="@color/white"
                android:text="@string/number_zero"/>

            <TextView
                android:id="@+id/t9_key_backspace"
                style="@style/keyboard_button"
                android:text="@string/ic_delete"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="visible"/>
            <TextView
                android:id="@+id/t9_key_add_sale"
                style="@style/keyboard_button"
                android:textColor="@color/black"
                android:text="@string/add_sale"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:visibility="gone"/>
        </TableRow>
        <TableRow
            style="@style/keyboard_row_last">
            <Button
                android:id="@+id/store_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_56"
                android:layout_weight="1"
                android:text="@string/make_payment"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/white"
                android:background="@color/purple"
                app:elevation="0dp"
                android:translationZ="0.1dp"
                />
        </TableRow>
    </TableLayout>

</LinearLayout>